force-app/main/default/objects/sObject_Events__e/sObject_Events__e.object-meta.xml
<CustomObject>
    <description>This event can be used on all objects to publish, for now, we are using this on Account.</description>
    <label>sObject Events</label>
    <pluralLabel>sObject Events</pluralLabel>
</CustomObject>