force-app/main/default/objects/sObject_Events__e/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Contains related record ID</description>
    <inlineHelpText>Contains the related record ID</inlineHelpText>
    <label>Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>