force-app/main/default/objects/sObject_Events__e/fields/sObject__c.field-meta.xml
<CustomField>
    <fullName>sObject__c</fullName>
    <description>Contains the sObject API Name</description>
    <inlineHelpText>Contains the sObject API Name</inlineHelpText>
    <label>sObject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>