force-app/main/default/objects/sObject_Events__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Contains the name of the Action type name. 
ex: we are using SMS Type to send SMSs to customers.</description>
    <inlineHelpText>Contains the name of the Action type name. 
ex: we are using SMS Type to send SMSs to customers.</inlineHelpText>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>